--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,23 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="new_project">New Project</string>
+    <string name="new_task">New Task</string>
+    <string name="example">example</string>
+    <string name="tap_to_add_description">Tap to add description</string>
+    <string name="title">Title</string>
+    <string name="set_date">Set date</string>
+    <string name="workflow_default_workflow">Workflow: Default Workflow</string>
+    <string name="priority">Priority</string>
+    <string name="add_to_project">Add to project</string>
+    <string name="add_assignee">Add assignee</string>
+    <string name="create_project">Create Project</string>
+    <string name="create_task">Create Task</string>
+    <string name="attachment">attachment</string>
+
+    <string-array name="priority">
+        <item>Default</item>
+        <item>High </item>
+        <item>Urgent</item>
+    </string-array>
 </resources>
