--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="example">example</string>
     <string name="tap_to_add_description">Tap to add description</string>
     <string name="title">Title</string>
-    <string name="set_date">Set date</string>
+    <string name="set_start_date">Set Start date</string>
+    <string name="set_end_date">Set End date</string>
     <string name="workflow_default_workflow">Workflow: Default Workflow</string>
     <string name="priority">Priority</string>
     <string name="add_to_project">Add to project</string>
@@ -19,6 +20,7 @@
     <string name="create_project">Create Project</string>
     <string name="create_task">Create Task</string>
     <string name="attachment">attachment</string>
+    <string name="set_date">Set Date</string>
 
     <string-array name="priority">
         <item>Default</item>
