--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="new_project">New Project</string>
     <string name="new_task">New Task</string>
     <string name="example">example</string>
+    <string name="set_start_date">Set Start date</string>
+    <string name="set_end_date">Set End date</string>
     <string name="tap_to_add_description">Tap to add description</string>
     <string name="title">Title</string>
     <string name="set_date">Set date</string>
