--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
         <item>High </item>
         <item>Urgent</item>
     </string-array>
+
+    <string-array name="roles">
+        <item>Admin</item>
+        <item>User</item>
+    </string-array>
+
+
 </resources>
