--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="feng_edit_project">Edit Project</string>
     <string name="feng_project_id">Project ID: </string>
     <string name="feng_due_date">Due date:</string>
+    <string name="feng_date_alert">End date can not early than start date</string>
 
     <string-array name="priority">
         <item>Default</item>
