--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="feng_project_id">Project ID: </string>
     <string name="feng_due_date">Due date:</string>
     <string name="feng_date_alert">End date can not early than start date</string>
+    <string name="due_date">Due Date</string>
+    <string name="task_id">Task ID</string>
 
     <string-array name="priority">
         <item>Default</item>
@@ -38,5 +40,11 @@
         <item>Start new project</item>
         <item>Not complete</item>
         <item>Completed</item>
+    </string-array>
+
+    <string-array name="task_status">
+        <item>Initial</item>
+        <item>In Progress</item>
+        <item>Complete</item>
     </string-array>
 </resources>
