--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="create_project">Create Project</string>
     <string name="create_task">Create Task</string>
     <string name="attachment">attachment</string>
-    <string name="feng_no_project_find">No project find</string>
+    <string name="feng_no_project_find">Nothing Find</string>
     <string name="feng_status">status</string>
     <string name="feng_edit_project">Edit Project</string>
     <string name="feng_project_id">Project ID: </string>
@@ -31,6 +31,19 @@
     <string name="task_id">Task Id</string>
     <string name="add_to_task">Add to task</string>
     <string name="add_subtask_description">Add subtask description</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="remember_me">Remember Me</string>
+    <string name="signup_success">Signup Successful</string>
+    <string name="sign_in">sign in</string>
+    <string name="login_fail">Login Fail</string>
+    <string name="no_member">No team member yet</string>
+    <string name="fcm_title">Task Assignment</string>
+    <string name="new_task_assign">New Task Assigned:</string>
+    <string name="login_succ">success</string>
+    <string name="login_alert">Invalid email/password</string>
+    <string name="google_signin">Welcome Back</string>
+    <string name="new_assignment">New Assignment</string>
 
     <string-array name="priority">
         <item>Default</item>
@@ -42,5 +55,16 @@
         <item>Start new project</item>
         <item>Not complete</item>
         <item>Completed</item>
+    </string-array>
+
+    <string-array name="task_status">
+        <item>Initial</item>
+        <item>In Progress</item>
+        <item>Complete</item>
+    </string-array>
+
+    <string-array name="roles">
+        <item>Manager</item>
+        <item>User </item>
     </string-array>
 </resources>
