--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="logout">Logout</string>
     <string name="pick_file">Please choose a file</string>
     <string name="no_file_picker">No file picker find</string>
+    <string name="upload_success">File uploaded successfully</string>
 </resources>
